{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 1063,
  "lineage": "7d74c729-1f34-7a8f-35bb-dab83cd66e10",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:network-acl/acl-0b59214f4ba3d4fe0",
            "default_network_acl_id": "acl-0b59214f4ba3d4fe0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b59214f4ba3d4fe0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "725840066530",
            "subnet_ids": [
              "subnet-01dc0c819c6d5bb01",
              "subnet-0255a18d22cc9b44d",
              "subnet-0488f8505707285b2",
              "subnet-08eae8199946111b7",
              "subnet-092e006ea9b610cf2",
              "subnet-0e42dc8a7d0fe6986"
            ],
            "tags": {
              "Name": "sales-prod-mili-vpc-default",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-default",
              "environment": "prod",
              "owners": "sales"
            },
            "vpc_id": "vpc-0b757bf082d24ce7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:route-table/rtb-0d55f6186fdfbf08c",
            "default_route_table_id": "rtb-0d55f6186fdfbf08c",
            "id": "rtb-0d55f6186fdfbf08c",
            "owner_id": "725840066530",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "sales-prod-mili-vpc-default",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-default",
              "environment": "prod",
              "owners": "sales"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b757bf082d24ce7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:security-group/sg-05f47a343c0b47ff0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05f47a343c0b47ff0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "725840066530",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sales-prod-mili-vpc-default",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-default",
              "environment": "prod",
              "owners": "sales"
            },
            "vpc_id": "vpc-0b757bf082d24ce7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6fbe211e53146b9",
            "domain": "vpc",
            "id": "eipalloc-0d6fbe211e53146b9",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-229-94-82.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.229.94.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sales-prod-mili-vpc-eu-west-1a",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-eu-west-1a",
              "environment": "prod",
              "owners": "sales"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:internet-gateway/igw-0ec8e593b38f6b29f",
            "id": "igw-0ec8e593b38f6b29f",
            "owner_id": "725840066530",
            "tags": {
              "Name": "sales-prod-mili-vpc",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc",
              "environment": "prod",
              "owners": "sales"
            },
            "vpc_id": "vpc-0b757bf082d24ce7a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6fbe211e53146b9",
            "association_id": "eipassoc-0f504dd44c4e0456b",
            "connectivity_type": "public",
            "id": "nat-04cca213bbcb9e75b",
            "network_interface_id": "eni-0ea42ac7518a2f9ec",
            "private_ip": "10.0.101.143",
            "public_ip": "54.229.94.82",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e42dc8a7d0fe6986",
            "tags": {
              "Name": "sales-prod-mili-vpc-eu-west-1a",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-eu-west-1a",
              "environment": "prod",
              "owners": "sales"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-005ae61dfa74f7d0c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04cca213bbcb9e75b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-005ae61dfa74f7d0c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ec8e593b38f6b29f",
            "id": "r-rtb-0c74063b89e4c8a1f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c74063b89e4c8a1f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:route-table/rtb-0f00cdb619f7cdce1",
            "id": "rtb-0f00cdb619f7cdce1",
            "owner_id": "725840066530",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sales-prod-mili-vpc-db",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-db",
              "environment": "prod",
              "owners": "sales"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b757bf082d24ce7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:route-table/rtb-005ae61dfa74f7d0c",
            "id": "rtb-005ae61dfa74f7d0c",
            "owner_id": "725840066530",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sales-prod-mili-vpc-private",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-private",
              "environment": "prod",
              "owners": "sales"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b757bf082d24ce7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:route-table/rtb-0c74063b89e4c8a1f",
            "id": "rtb-0c74063b89e4c8a1f",
            "owner_id": "725840066530",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sales-prod-mili-vpc-public",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-public",
              "environment": "prod",
              "owners": "sales"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b757bf082d24ce7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dc82d1b00f0bfce",
            "route_table_id": "rtb-0f00cdb619f7cdce1",
            "subnet_id": "subnet-08eae8199946111b7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b04faf4386334410",
            "route_table_id": "rtb-0f00cdb619f7cdce1",
            "subnet_id": "subnet-0255a18d22cc9b44d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f58d56c81bc65035",
            "route_table_id": "rtb-005ae61dfa74f7d0c",
            "subnet_id": "subnet-0488f8505707285b2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d93ce23fbd929787",
            "route_table_id": "rtb-005ae61dfa74f7d0c",
            "subnet_id": "subnet-092e006ea9b610cf2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a7bdde23775e44e",
            "route_table_id": "rtb-0c74063b89e4c8a1f",
            "subnet_id": "subnet-0e42dc8a7d0fe6986"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087ea077070c2b548",
            "route_table_id": "rtb-0c74063b89e4c8a1f",
            "subnet_id": "subnet-01dc0c819c6d5bb01"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:subnet/subnet-08eae8199946111b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08eae8199946111b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725840066530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sales-prod-mili-vpc-db-eu-west-1a",
              "Type": "database-subnets",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-db-eu-west-1a",
              "Type": "database-subnets",
              "environment": "prod",
              "owners": "sales"
            },
            "vpc_id": "vpc-0b757bf082d24ce7a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:subnet/subnet-0255a18d22cc9b44d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0255a18d22cc9b44d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725840066530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sales-prod-mili-vpc-db-eu-west-1b",
              "Type": "database-subnets",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-db-eu-west-1b",
              "Type": "database-subnets",
              "environment": "prod",
              "owners": "sales"
            },
            "vpc_id": "vpc-0b757bf082d24ce7a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:subnet/subnet-0488f8505707285b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0488f8505707285b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725840066530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sales-prod-mili-vpc-private-eu-west-1a",
              "Type": "private-subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-private-eu-west-1a",
              "Type": "private-subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "sales"
            },
            "vpc_id": "vpc-0b757bf082d24ce7a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:subnet/subnet-092e006ea9b610cf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092e006ea9b610cf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725840066530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sales-prod-mili-vpc-private-eu-west-1b",
              "Type": "private-subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-private-eu-west-1b",
              "Type": "private-subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "sales"
            },
            "vpc_id": "vpc-0b757bf082d24ce7a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:subnet/subnet-0e42dc8a7d0fe6986",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e42dc8a7d0fe6986",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725840066530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sales-prod-mili-vpc-public-eu-west-1a",
              "Type": "Public Subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-public-eu-west-1a",
              "Type": "Public Subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "sales"
            },
            "vpc_id": "vpc-0b757bf082d24ce7a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:subnet/subnet-01dc0c819c6d5bb01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dc0c819c6d5bb01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725840066530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sales-prod-mili-vpc-public-eu-west-1b",
              "Type": "Public Subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc-public-eu-west-1b",
              "Type": "Public Subnets",
              "environment": "prod",
              "kubernetes.io/cluster/sales-prod-eks-sales": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "sales"
            },
            "vpc_id": "vpc-0b757bf082d24ce7a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:725840066530:vpc/vpc-0b757bf082d24ce7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b59214f4ba3d4fe0",
            "default_route_table_id": "rtb-0d55f6186fdfbf08c",
            "default_security_group_id": "sg-05f47a343c0b47ff0",
            "dhcp_options_id": "dopt-05339a25b83be3154",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b757bf082d24ce7a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d55f6186fdfbf08c",
            "owner_id": "725840066530",
            "tags": {
              "Name": "sales-prod-mili-vpc",
              "environment": "prod",
              "owners": "sales"
            },
            "tags_all": {
              "Name": "sales-prod-mili-vpc",
              "environment": "prod",
              "owners": "sales"
            }
          }
        }
      ]
    }
  ]
}